Class module added
